--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <body>
 <canvas></canvas>	
 <script type="text/javascript">
-	var sun = new Image();
+var sun = new Image();
 var moon = new Image();
 var earth = new Image();
+var canva=document.querySelector("canvas");
+var ctx=canva.getContext("2d");
+canva.height=300;
+canva.width=300;
 function init(){
   sun.src = 'https://mdn.mozillademos.org/files/1456/Canvas_sun.png';
   moon.src = 'https://mdn.mozillademos.org/files/1443/Canvas_moon.png';
@@ -17,8 +21,6 @@ function init(){
 }
 
 function draw() {
-  var ctx = document.getElementById('canvas').getContext('2d');
-
   ctx.globalCompositeOperation = 'destination-over';
   ctx.clearRect(0,0,300,300); // limpiar canvas
 
